[package]
name = "minderbeast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"]}
tokio-tungstenite = {version="0.21.0", features = ["native-tls"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
